--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,7 @@ jobs:
       - name: 安装必要软件
         run: |
           sudo apt update -qq
+          sudo apt upgrade -y
           sudo apt install -y qemu-kvm qemu-utils wget curl p7zip-full > /dev/null 2>&1
 
       - name: 下载上一次磁盘 (如有)
