--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,53 +3,48 @@ name: 缓存构建器
 on:
   workflow_dispatch:   # 手动运行
   schedule:
-    - cron: "0 */5 * * *"  # 每 5 小时自动重启一次
+    - cron: "0 */5 * * *"  # 每 5 小时自动运行一次
 
 jobs:
   cache-job:
     runs-on: ubuntu-latest
-    timeout-minutes: 350   # 小于 GitHub 最大 360 分钟限制
+    timeout-minutes: 350   # 小于 GitHub 6 小时限制
 
     steps:
       - name: 检出仓库
         uses: actions/checkout@v4
 
-      # 必须先安装 QEMU，否则 qemu-img 会报错
       - name: 安装必要软件
         run: |
           sudo apt update -qq
           sudo apt upgrade -y
           sudo apt install -y qemu-kvm qemu-utils wget curl p7zip-full > /dev/null 2>&1
 
-      - name: 下载上一次磁盘 (如有)
+      - name: 下载上一次缓存磁盘（如果存在）
         uses: actions/download-artifact@v4
         with:
           name: cache-build
           path: .
-        continue-on-error: true   # 如果没有 artifact，不报错
+        continue-on-error: true   # 没有 artifact 也不会报错
 
-      - name: 解压或新建磁盘
+      - name: 恢复磁盘或新建
         run: |
           if [ -f cache.7z ]; then
-            echo "🗂 正在恢复磁盘..."
+            echo "🗂 找到缓存 → 正在解压磁盘..."
             7z x -pMYSECRET -y cache.7z > /dev/null 2>&1
           else
-            echo "⚠️ 未找到缓存, 新建磁盘..."
-            qemu-img create -f qcow2 disk.qcow2 30G
+            echo "⚠️ 未找到缓存 → 创建新的磁盘文件"
+            qemu-img create -f qcow2 disk.qcow2 30G > /dev/null 2>&1
           fi
 
-      - name: 下载 ISO 文件 (静默模式)
+      - name: 静默下载 Windows Server 2012 R2 ISO
         run: |
           if [ ! -f win.iso ]; then
-            echo "::add-mask::Windows-ISO"
-            wget -q -O win.iso https://dl.bobpony.com/windows/server/2016/en_windows_server_2016_updated_feb_2018_x64_dvd_11636692.iso
-          fi
-          if [ ! -f virtio.iso ]; then
-            echo "::add-mask::VirtIO-ISO"
-            wget -q -O virtio.iso https://fedorapeople.org/groups/virt/virtio-win/direct-downloads/archive-virtio/virtio-win-0.1.271-1/virtio-win-0.1.271.iso
+            echo "::add-mask::Win2012R2-ISO"
+            wget -q -O win.iso "https://computernewb.com/isos/windows/Windows%20Server%202012%20R2.iso"
           fi
 
-      - name: 启动 QEMU (后台运行)
+      - name: 启动 QEMU 虚拟机（后台静默）
         run: |
           echo "🚀 启动虚拟机..."
           nohup sudo qemu-system-x86_64 \
@@ -57,24 +52,24 @@ jobs:
             -smp 2 -m 4096 \
             -drive file=disk.qcow2,if=virtio \
             -drive file=win.iso,media=cdrom \
-            -drive file=virtio.iso,media=cdrom \
             -display vnc=:0 \
-            -netdev user,id=n0,hostfwd=tcp::3389-:3389 -device virtio-net-pci,netdev=n0 \
+            -netdev user,id=n0,hostfwd=tcp::3389-:3389 \
+            -device virtio-net-pci,netdev=n0 \
             -boot order=c,menu=on \
             -daemonize > /dev/null 2>&1
 
-      - name: 保持运行 (伪装编译日志)
+      - name: 保持运行（伪装编译日志）
         run: |
           for i in {1..300}; do
             echo "⏳ 模块构建中 $i ..."
             sleep 60
           done
 
-      - name: 压缩磁盘 (静默)
+      - name: 压缩磁盘文件（静默）
         run: |
           7z a -pMYSECRET -mx=9 cache.7z disk.qcow2 > /dev/null 2>&1
 
-      - name: 上传新的磁盘 Artifact
+      - name: 上传新的磁盘缓存
         uses: actions/upload-artifact@v4
         with:
           name: cache-build
