--- a/.github/workflows/mac-os.yml
+++ b/.github/workflows/mac-os.yml
@@ -11,22 +11,17 @@ jobs:
     steps:
       - name: Đặt mật khẩu cho user runner
         run: |
-          echo "runner:123456Hi" | sudo chpasswd
-          echo "✅ Đã đặt mật khẩu cho user 'runner'"
+          sudo dscl . -passwd /Users/runner 123456Hi
+          echo "✅ Đã đặt mật khẩu cho user 'runner' = 123456Hi"
 
       - name: Bật VNC server (Screen Sharing)
         run: |
           sudo /System/Library/CoreServices/RemoteManagement/ARDAgent.app/Contents/Resources/kickstart \
-            -activate -configure -access -on -restart -agent -privs -all
+            -activate -configure -access -on -restart -agent -privs -all \
+            -configure -clientopts -setvnclegacy -vnclegacy yes -setvncpw 123456Hi
+          echo "✅ VNC server đã bật (user=runner, pass=123456Hi)"
 
-          # Bật legacy VNC password (dùng để cho phép client nhập pass)
-          sudo /System/Library/CoreServices/RemoteManagement/ARDAgent.app/Contents/Resources/kickstart \
-            -configure -clientopts -setvnclegacy -vnclegacy yes \
-            -setvncpw 123456Hi
-
-          echo "✅ VNC server đã bật: user=runner, pass=123456Hi"
-
-      - name: Mở tunnel VNC qua Pinggy (sẽ in URL/IP)
+      - name: Mở tunnel VNC qua Pinggy (hiện URL/IP)
         run: |
           while true; do
             ssh -p 443 -o StrictHostKeyChecking=no -o ServerAliveInterval=30 \
