--- a/.github/workflows/win.yaml
+++ b/.github/workflows/win.yaml
@@ -48,15 +48,15 @@ jobs:
         $time = Get-Date -Format "HH:mm:ss"
         Write-Host ""
         Write-Host "==========================="
-        Write-Host "    💻 DUO VPS - 6Hour ⏳   "
-        Write-Host " BY: 🐉 SHANGHAI & NULLTESTFUN1 ⚡"
+        Write-Host "    DUO VPS - 6Hour    "
+        Write-Host " BY: SHANGHAI & NULLTESTFUN1 "
         Write-Host "==========================="
-        Write-Host " 🌐 HOST/IP : (xem log Pinggy ở trên)"
-        Write-Host " 👤 USER    : blender"
-        Write-Host " 🔑 PASS    : 123456Hi"
-        Write-Host " ⏱️ Max TIME: 6 Hour"
+        Write-Host "  HOST/IP : (xem log Pinggy ở trên)"
+        Write-Host "  USER    : blender"
+        Write-Host "  PASS    : 123456Hi"
+        Write-Host "  Max TIME: 6 Hour"
         Write-Host "==========================="
-        Write-Host "✅ Started at $time"
+        Write-Host " Started at $time"
         Write-Host ""
 
     - name: Keep Alive & Anti-ban
