--- a/.github/workflows/win.yaml
+++ b/.github/workflows/win.yaml
@@ -9,7 +9,7 @@ jobs:
     timeout-minutes: 360
 
     steps:
-    - name: Update system
+    - name: Setup system
       run: |
         sudo apt update -y
         sudo apt upgrade -y
@@ -21,39 +21,40 @@ jobs:
         sudo usermod -aG sudo blender
         echo "✅ User blender created with sudo privileges"
 
-    - name: Install XFCE4 Desktop + RDP + SSH
+    - name: Install XFCE4 + xRDP + SSH
       run: |
-        sudo apt install -y xfce4 xrdp openssh-server
+        sudo DEBIAN_FRONTEND=noninteractive apt install -y xfce4 xfce4-goodies xrdp openssh-server
         sudo systemctl enable xrdp
         sudo systemctl start xrdp
         sudo systemctl enable ssh
         sudo systemctl start ssh
-        echo "✅ XFCE + RDP + SSH installed & running"
+        # Cho phép password login qua SSH
+        sudo sed -i 's/^#PasswordAuthentication.*/PasswordAuthentication yes/' /etc/ssh/sshd_config
+        sudo sed -i 's/^PasswordAuthentication.*/PasswordAuthentication yes/' /etc/ssh/sshd_config
+        sudo systemctl restart ssh
+        echo "✅ XFCE4 + RDP + SSH installed & running"
 
-    - name: Start Pinggy tunnel for RDP
+    - name: Start Pinggy Tunnel (RDP + SSH)
       run: |
-        ssh -o StrictHostKeyChecking=no -p 443 -R0:127.0.0.1:3389 qr@free.pinggy.io &
-        sleep 15
+        nohup ssh -o StrictHostKeyChecking=no -p 443 -R0:127.0.0.1:3389 qr@free.pinggy.io > /dev/null 2>&1 &
+        nohup ssh -o StrictHostKeyChecking=no -p 443 -R0:127.0.0.1:22 qr@free.pinggy.io > /dev/null 2>&1 &
+        sleep 20
         echo "==========================="
         echo "    🐧 DUO VPS - Ubuntu RDP "
         echo " BY: 🐉 SHANGHAI & NULLTESTFUN1 ⚡"
         echo "==========================="
-        echo " 🌐 HOST/IP : (xem log Pinggy ở trên)"
+        echo " 🌐 HOST/IP : (xem log Pinggy ở trên phần kết nối)"
         echo " 👤 USER    : blender"
         echo " 🔑 PASS    : 123456Hi"
         echo " ⏱️ Max TIME: 6 Hour"
         echo "==========================="
+        echo "✅ VPS Ready at $(date +%H:%M:%S)"
+        echo ""
 
-    - name: Start Pinggy tunnel for SSH
-      run: |
-        ssh -o StrictHostKeyChecking=no -p 443 -R0:127.0.0.1:22 qr@free.pinggy.io &
-        sleep 5
-        echo "✅ SSH tunnel started"
-        echo "➡ Login bằng: ssh blender@HOST -p PORT (xem log Pinggy)"
-    
     - name: Keep Alive
       run: |
         while true; do
-          echo "🔹 Alive ping at $(date +%H:%M:%S) :: $RANDOM"
+          RAND=$((1000 + RANDOM % 9000))
+          echo "🔹 Alive ping :: $RAND"
           sleep 300
         done
