--- a/.github/workflows/win.yaml
+++ b/.github/workflows/win.yaml
@@ -1,4 +1,4 @@
-name: Ubuntu 25.3.1 Alpha
+name: Ubuntu 25.3.1 Demo
 
 on:
   workflow_dispatch:
@@ -6,7 +6,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    timeout-minutes: 360   # max 6 giờ
+    timeout-minutes: 360   # max 6h
 
     steps:
     - name: Setup system (fast)
@@ -19,32 +19,26 @@ jobs:
         echo "blender:123456Hi" | sudo chpasswd
         sudo usermod -aG sudo blender
 
-    - name: Install LXDE + xRDP + SSH
+    - name: Install SSH
       run: |
-        sudo DEBIAN_FRONTEND=noninteractive apt-get install -y lxde xrdp openssh-server
-        sudo systemctl enable xrdp --now
+        sudo apt-get install -y openssh-server
         sudo systemctl enable ssh --now
-        # Enable password login for SSH
+        # enable password login
         sudo sed -i 's/^#PasswordAuthentication.*/PasswordAuthentication yes/' /etc/ssh/sshd_config
         sudo sed -i 's/^PasswordAuthentication.*/PasswordAuthentication yes/' /etc/ssh/sshd_config
         sudo systemctl restart ssh
 
-    - name: Start Pinggy tunnels and capture IPs
+    - name: Start Pinggy SSH tunnel
       shell: bash
       run: |
-        # Start RDP tunnel
-        RDP_LOG=$(ssh -o StrictHostKeyChecking=no -p 443 -R0:127.0.0.1:3389 qr@free.pinggy.io 2>&1 | grep -m 1 "Forwarding TCP traffic from")
-        RDP_ADDR=$(echo "$RDP_LOG" | awk '{print $5}' | sed 's/tcp:\/\///')
-
-        # Start SSH tunnel
-        SSH_LOG=$(ssh -o StrictHostKeyChecking=no -p 443 -R0:127.0.0.1:22 qr@free.pinggy.io 2>&1 | grep -m 1 "Forwarding TCP traffic from")
-        SSH_ADDR=$(echo "$SSH_LOG" | awk '{print $5}' | sed 's/tcp:\/\///')
+        ssh -o StrictHostKeyChecking=no -p 443 -R0:127.0.0.1:22 qr@free.pinggy.io > ssh.log 2>&1 &
+        sleep 8
+        SSH_ADDR=$(grep -m 1 "Forwarding TCP" ssh.log | awk '{print $5}' | sed 's/tcp:\/\///')
 
         echo "==========================="
-        echo "    🐧 DUO VPS - Ubuntu RDP "
+        echo "    🐧 DUO VPS - Ubuntu SSH "
         echo " BY: 🐉 SHANGHAI & NULLTESTFUN1 ⚡"
         echo "==========================="
-        echo " 🌐 RDP HOST/IP : $RDP_ADDR"
         echo " 🌐 SSH HOST/IP : $SSH_ADDR"
         echo " 👤 USER        : blender"
         echo " 🔑 PASS        : 123456Hi"
